--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@heroui/theme": "2.4.12",
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.20",
-    "@supabase/supabase-js": "^2.49.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.49.4",
     "clsx": "2.1.1",
     "framer-motion": "11.13.1",
     "intl-messageformat": "^10.5.0",
