--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@heroui/switch": "2.2.14",
     "@heroui/system": "2.4.12",
     "@heroui/theme": "2.4.12",
+    "@nextui-org/react": "^2.6.11",
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.20",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.4",
     "clsx": "2.1.1",
-    "framer-motion": "11.13.1",
+    "framer-motion": "^11.13.1",
     "intl-messageformat": "^10.5.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
