--- a/package.json
+++ b/package.json
@@ -9,30 +9,31 @@
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
   },
   "dependencies": {
-    "@heroui/button": "2.2.16",
-    "@heroui/code": "2.2.12",
-    "@heroui/input": "2.4.16",
-    "@heroui/kbd": "2.2.12",
-    "@heroui/link": "2.2.13",
-    "@heroui/listbox": "2.3.15",
-    "@heroui/navbar": "2.2.14",
+    "@heroui/avatar": "^2.2.13",
+    "@heroui/button": "^2.2.16",
+    "@heroui/card": "^2.2.16",
+    "@heroui/chip": "^2.2.13",
+    "@heroui/code": "^2.2.12",
+    "@heroui/input": "^2.4.16",
+    "@heroui/kbd": "^2.2.12",
+    "@heroui/link": "^2.2.13",
+    "@heroui/listbox": "^2.3.15",
+    "@heroui/navbar": "^2.2.14",
     "@heroui/react": "^2.7.5",
-    "@heroui/snippet": "2.2.17",
-    "@heroui/switch": "2.2.14",
-    "@heroui/system": "2.4.12",
-    "@heroui/theme": "2.4.12",
-    "@nextui-org/react": "^2.6.11",
-    "@react-aria/ssr": "3.9.7",
-    "@react-aria/visually-hidden": "3.8.20",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@heroui/snippet": "^2.2.17",
+    "@heroui/switch": "^2.2.14",
+    "@heroui/system": "^2.4.12",
+    "@heroui/theme": "^2.4.12",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
-    "clsx": "2.1.1",
+    "clsx": "^2.1.1",
+    "eslint-config-next": "^15.3.0",
     "framer-motion": "^11.13.1",
     "intl-messageformat": "^10.5.0",
-    "next": "15.0.4",
-    "next-themes": "^0.4.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "^15.3.0",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0"
   },
@@ -45,15 +46,13 @@
     "@typescript-eslint/eslint-plugin": "8.11.0",
     "@typescript-eslint/parser": "8.11.0",
     "autoprefixer": "10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.0.4",
+    "eslint": "^9.1.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "postcss": "8.4.49",
     "prettier": "3.3.3",
