--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "@heroui/theme": "^2.4.12",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/nodemailer": "^6.4.17",
     "clsx": "^2.1.1",
     "eslint-config-next": "^15.3.0",
     "framer-motion": "^11.13.1",
     "intl-messageformat": "^10.5.0",
     "next": "^15.3.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "resend": "^4.5.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.0.4",
