--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.2",
     "react": "^19.1.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
