Ajout d'une commande "ngrok" dans package.json, mise à jour de la gestion des invitations avec ajout de l'ID d'événement dans l'API d'envoi d'invitations, et amélioration de l'affichage des événements avec des ajustements CSS pour une meilleure présentation.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+    "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix",
+    "ngrok": "ngrok http 3000"
   },
   "dependencies": {
     "@heroui/avatar": "^2.2.13",
